<resources>
    <string name="app_name">Atividade Avaliativa 1</string>
    <string name="informe_os_quatro_valores">Informe os quatro valores:</string>
    <string name="calcuar">Calcuar</string>
    <string name="limpar">limpar</string>
    <string name="valor_4">Valor 4</string>
    <string name="valor_3">Valor 3</string>
    <string name="valor_2">Valor 2</string>
    <string name="valor_1">Valor 1</string>
    <string name="passar_dados_para_pr_xima_tela">Passar dados para próxima tela</string>
    <string name="resultado_da_divis_o">Resultado da divisão:</string>
    <string name="novo_calculo">Novo Calculo</string>
</resources>