<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/tvMensagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:hint="@string/informe_os_quatro_valores"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@+id/btnLimpar"
        android:layout_marginTop="199dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/resultado_da_divis_o"
        android:textSize="20dp" />

        <EditText
            android:id="@+id/etValor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMensagem"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:ems="4"
            android:hint="@string/valor_1"
            android:inputType="number" />
        <EditText
            android:id="@+id/etValor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/etValor1"
            android:layout_alignTop="@+id/etValor1"
            android:layout_toEndOf="@+id/etValor1"
            android:layout_marginLeft="16dp"
            android:ems="4"
            android:hint="@string/valor_2"
            android:inputType="number" />
    <EditText
        android:id="@+id/etValor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/etValor2"
        android:layout_alignTop="@+id/etValor2"
        android:layout_toEndOf="@+id/etValor2"
        android:layout_marginLeft="16dp"
        android:ems="4"
        android:hint="@string/valor_3"
        android:inputType="number" />

    <EditText
        android:id="@+id/etValor4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/etValor3"
        android:layout_alignTop="@+id/etValor3"
        android:layout_toEndOf="@+id/etValor3"
        android:layout_marginLeft="16dp"
        android:ems="4"
        android:hint="@string/valor_4"
        android:inputType="number" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpar"
        android:layout_below="@+id/etValor1"
        android:layout_margin="16dp"
        />
    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcuar"
        android:layout_below="@+id/etValor1"
        android:layout_toRightOf="@id/btnLimpar"
        android:layout_margin="16dp"
        />

    <Button
        android:id="@+id/btnProximaTela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvResultado"
        android:layout_margin="16dp"
        android:layout_marginTop="199dp"
        android:layout_marginBottom="16dp"
        android:text="@string/passar_dados_para_pr_xima_tela" />
</RelativeLayout>
